[build-system]
requires = ["hatchling>=1.30", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "edify"
description = "Regular Expressions Made Simple"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bobby", email = "me@shi.foo" },
    { name = "natsuoto", email = "natsuoto@thatcomputerscientist.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
graphviz = ["graphviz>=0.20"]

[project.urls]
Documentation = "https://edify.readthedocs.io/"
Changelog = "https://edify.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/luciferreeves/edify/issues"

[dependency-groups]
dev = [
    "graphviz>=0.20",
    "hypothesis>=6.100",
    "mypy==1.13.0",
    "pyright==1.1.389",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/edify",
    "/tests",
    "/docs",
    "/README.rst",
    "/CHANGELOG.rst",
    "/CONTRIBUTING.rst",
    "/AUTHORS.rst",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["edify"]

[tool.hatch.build.targets.wheel.force-include]
"edify/py.typed" = "edify/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "PT",
    "RUF",
    "PERF",
    "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
filterwarnings = ["error"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
strict = ["edify"]
reportMissingImports = "error"
reportMissingTypeStubs = "error"

[[tool.pyright.executionEnvironments]]
root = "edify/compile"
reportMissingTypeStubs = "none"

[tool.mypy]
python_version = "3.11"
files = ["edify", "tests", "docs"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["edify.*"]
strict = true

[[tool.mypy.overrides]]
module = ["regex"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["graphviz"]
ignore_missing_imports = true

[tool.coverage.run]
branch = false
source = ["edify"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100